# todo

./: .gitignore  README.md  one_file.py  one_file_class.py  pyproject.toml  secrets.example.json
todo/: __init__.py  __main__.py
todo/src/: __init__.py  app.py
todo/src/tests/: test_add_todo.py  test_delete_todo.py  test_done_todo.py  test_list_todos.py  test_validate_date.py
todo/src/utils/: __init__.py  panels.py
